--- a/lessonixapp/templates/navbar.html
+++ b/lessonixapp/templates/navbar.html
@@ -50,7 +50,7 @@
                         <img class="profile-img" src="{% static 'img/student_ico.png' %}" alt="Profile Icon">
                     </a>
                     <p class="full-name">{{ request.session.full_name }}</p>
-                    <a href="https://vm.tiktok.com/ZMkjXrXDY/">
+                    <a href="https://lessonix.pythonanywhere.com">
                         <img class="logout-img" src="{% static 'img/logout-btn.png' %}" alt="Logout Button">
                     </a>
                 </div>
