--- a/lessonixapp/static/styles/lesson.css
+++ b/lessonixapp/static/styles/lesson.css
@@ -51,3 +51,59 @@ hr {
 .end-lesson .btn:hover {
     background-color: #45a049; /* Darker green on hover */
 }
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0; /* Modal initially invisible */
+    visibility: hidden; /* Ensures that it's not clickable when hidden */
+    transition: opacity 0.2s linear; /* Transition for opacity with linear timing */
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 15px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    transition: transform 0.2s linear, opacity 0.2s linear; /* Use linear timing for transitions */
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    flex-direction: row-reverse; /* Close button will be on the right, text on the left */
+}
+
+/* Hidden modal class */
+.hidden {
+    display: none;
+}
+
+.modal.show {
+    opacity: 1; /* Make the modal visible */
+    visibility: visible; /* Modal becomes interactive */
+}
+
+/* Modal content for when the modal is shown */
+.modal.show .modal-content {
+    transform: translateY(0); /* Slide up to position */
+    opacity: 1; /* Make the content visible */
+}
+
+/* Modal content for when the modal is hidden */
+.modal.hidden .modal-content {
+    transform: translateY(100%); /* Slide down */
+    opacity: 0; /* Fade out */
+}
