ukrainan languacge countodown for qr

--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lesson.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lesson.html
@@ -31,7 +31,7 @@
             <img src="data:image/png;base64,{{ qr_code }}" alt="QR Code">
         </div>
         <div id="qr-update-info">
-            <p id="countdown-text">QR code will update in 30 seconds</p> <!-- Initial text -->
+            <p id="countdown-text">Оновлення QR через: 30</p> <!-- Initial text -->
         </div>
     </div>
 </div>
