ukr localization for primary class button

--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/class_detail.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/class_detail.html
@@ -11,7 +11,7 @@
 
         <form method="post" action="{% url 'set_primary_class' school_id=school_id class_name=class_name %}">
             {% csrf_token %}
-            <button type="submit" class="set-primary-btn">Set as Primary Class</button>
+            <button type="submit" class="set-primary-btn">Вказати як свій клас</button>
         </form>
     </div>
     <hr>
