navbar logo adjustment

--- a/lessonixapp/templates/navbar.html
+++ b/lessonixapp/templates/navbar.html
@@ -4,8 +4,9 @@
     <div class="navbar-content">
         <div class="main-ico">
             <a href="/">
-                <img src="{% static 'img/mainpage_ico.png' %}" alt="Main Icon">
+                <img src="{% static 'img/tab_ico.png' %}" alt="Main Icon">
             </a>
+            <p class="navbar-title">Lessonix</p>
         </div>
 
         <div class="links-container">
