--- a/lessonixapp/static/styles/navbar.css
+++ b/lessonixapp/static/styles/navbar.css
@@ -28,13 +28,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 110px;
+}
+
+.navbar-title {
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: -10px;
 }
 
 .main-ico img {
     width: 130px;
     height: auto;
     border-radius: 10px;
+    margin-top: 50px;
     transition: transform 0.3s ease;
 }
 
