--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/profile.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/profile.html
@@ -1,10 +1,53 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div class="profile-container">
-    <h1>{{ user.full_name }}</h1>
-    <p>E-mail: {{ user.email }}</p>
-    <p>Школа: {{ school_name }}</p>
-    <p>Класи: {{ user.classes }}</p>
+
+{% load static %}
+
+<div class="teacher-profile-container">
+    <div class="upper-div-profile">
+        <a class="back-button" href="/">
+            <img src="{% static 'img/arrow-left.png' %}" alt="Back Icon">
+        </a>
+        <p class="teacher-title"> [ FULL NAME ] </p>
+        <div class="teacher-icon">
+            <img src="{% static 'img/teacher-ico.png' %}" alt="Teacher Icon">
+        </div>
+    </div>
+    <div class="center-div">
+        <div class="profile-image">
+            <img src="{% static 'img/profile-ico.png' %}" alt="Profile Image">
+        </div>
+        <div class="info-div">
+            <div class="left-info">
+                <div class="registered-info">
+                    <p class="info"> [ REGISTRATION STATUS ] </p>
+                </div>
+                <div class="classes-info">
+                    <p class="info"> [ CLASSES INFO ] </p>
+                    <div class="class-box">
+                        10-A
+                    </div>
+                </div>
+            </div>
+            <div class="right-info">
+                <div class="subjects-info">
+                    <p class="info"> [ SUBJECTS INFO ] </p>
+                    <div class="subject-box">
+                        Алгебрa
+                    </div>
+                </div>
+                <div class="cabinets-info">
+                    <p class="info"> [ CABINETS INFO ] </p>
+                    <div class="cabinet-box">
+                        302
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<link rel="stylesheet" type="text/css" href="{% static 'styles/profile.css' %}" />
+
 {% endblock content %}
