--- a/lessonixapp/static/styles/navbar.css
+++ b/lessonixapp/static/styles/navbar.css
@@ -46,13 +46,13 @@
     transition: transform 0.3s ease;
 }
 
-.buttons-container {
+.sidebar .buttons-container {
     display: flex;
     flex-direction: column;
     gap: 1px;
 }
 
-.button {
+.sidebar .button {
     margin: 0;
     font-size: 14px;
     font-weight: bold;
@@ -63,7 +63,7 @@
     padding: 10px; /* Add padding for better click area */
 }
 
-.button:hover {
+.sidebar .button:hover {
     transform: translateX(6px); /* Move to the right on hover */
 }
 
@@ -80,19 +80,19 @@
     padding: 0 10px; /* Add some padding */
 }
 
-.profile-container {
+.sidebar .profile-container {
     display: flex;
     align-items: center; /* Center vertically */
     gap: 10px; /* Space between profile image, name, and logout button */
 }
 
-.profile-img {
+.sidebar .profile-img {
     width: 30px;
     height: 30px;
     border-radius: 50%; /* Make the profile image round */
 }
 
-.full-name {
+.sidebar .full-name {
     font-size: 11px;
     font-weight: bold;
     margin: 0;
